# dvorak-epic-games-launcher

./: .taurignore  Dockerfile  LICENSE  README.md  cargo.toml  compose.yaml
backend/: .env  Cargo.toml  epic.db
backend/migrations/2024-04-16-105738_create_accounts/: down.sql  up.sql
backend/migrations/2024-04-19-091421_add_username/: down.sql  up.sql
backend/migrations/2024-04-20-094112_create_games/: down.sql  up.sql
backend/src/: api.rs  db.rs  main.rs  schema.rs
backend/src/api/: account.rs
backend/src/api/accounts/: mod.rs  models.rs
backend/src/api/games/: mod.rs
backend/src/models/: mod.rs
share/: Cargo.toml  README.md
share/src/: accounts.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-ui/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
src-ui/css/: input.css
src-ui/src/: app.rs  main.rs  storages.rs
src-ui/src/components/: homepage.rs  login.rs  mod.rs  signin.rs  transfer.rs
src-ui/src/components/base/: alert.rs  button.rs  checkbox.rs  dropdown.rs  epic_loading.rs  homepage.rs  icons.rs  mod.rs
src-ui/src/components/homepage/: friends_tab.rs  library.rs  store.rs  store_detail.rs
src-ui/src/components/login/: settings.rs
src-ui/src/components/signin/: email_sent.rs  forgot_password.rs  settings.rs  valid_email.rs  valid_password.rs
src-ui/src/components/utils/: dropdown.rs  icons.rs  input.rs  mod.rs
src-ui/src/models/: mod.rs
src-ui/src/server/: games.rs  mod.rs  signin_signout.rs
src-ui/src/utils/: mod.rs
