[package]
name = "backend"
version = "0.0.1"
edition = "2021"
authors = ["Dvorak Chen"]
repository = "https://github.com/dvorakchen/dvorak-epic-games-launcher"
description = "A better Epic Games Launcher"
license = "MIT"

[dependencies]
share = { path = "../share" }
log = "*"
env_logger = "0.11.3"
r2d2 = "0.8.10"
actix-cors = "0.7.0"
dotenv = "0.15.0"
actix-web = "4.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
indexmap = "=1.6.2"
r2d2_sqlite = "0.24.0"
