[package]
name = "share"
version = "0.0.1"
edition = "2021"
authors = ["Dvorak Chen"]
repository = "https://github.com/dvorakchen/dvorak-epic-games-launcher"
dependencies = "A better Epic Games Launcher"
license = "MIT"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }