[package]
name = "src_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos_router = { version = "0.6.9", features = ["nightly", "csr"] }
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
log = "0.4.21"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = [
    "all",
] }
futures = "0.3"

gloo = { workspace = true }
email_address = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
share = { workspace = true }
reqwest = { version = "0.12.3", features = ["json"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
